# pie_tricotissage_2024-2025

./: .gitignore  How to git.md  Liste_fonctionnalités_taches.ods  README.md  firmware_grbl.settings  main.py  pyproject.toml  requirements.txt
23-24/: Poussoir_rotation.ino
Interface/: WiP.py
Marq-tric/: .~lock.tt01.xlsx#  Marquage.py  Tricotissage.py  cercles.gcode  droites.gcode  t21.gcode  test_read_xlsx.py  test_visualisation.py  tricotissage.gcode  tt01.xlsx  visu.py
Tests visu gcode/: test-tricotissage.xlsx
Tests_visu_gcode/: .~lock.test-tricotissage.xlsx#  Poussoir_marquage.ino  Tricotissage_YZ.py  new_ttg.py  tt01.xlsx.gcode  visu.py
detpts/: aux.py  auxiliaires.py  det_trace.py  detection_points.py  elodie1.py  elodie2.py  generer_pos_aig.py  main.py  main_det_pts.py
docu/: 3pts_v1.ggb  3pts_v1_latex.txt  3pts_v2.ggb  3pts_v2_latex.txt  Architecture fonctionnelle.latex  archi_logiciel.puml  format_yaml.latex  format_yaml.puml  parcours_utilisateur.puml  test.md  test.puml  tric-seq.latex  tric-seq.puml
grbl/: config.h  cpu_map.h  report.c  spindle_control.c
interface/: appli.py
prgs_gcode/: essai.gcode  marq_1courbe.gcode  marq_Nom_Projet.gcode  marq_Test.gcode  marq_cercle.gcode  marq_essai.gcode  marq_lignes_paralleles.gcode  marq_lignes_écartées.gcode  t27.gcode  tric_1courbe.gcode  tric_Nom_Projet.gcode  tric_Test.gcode  tric_cercle.gcode  tric_essai.gcode  tric_lignes_paralleles.gcode  tric_lignes_écartées.gcode
pts2gcode/: marq_tric.py  to_yaml.py
src/: marq-tric.py  marq_tric.py
yaml_files/: 1courbe.yaml  Nom_Projet.yaml  Test.yaml  (+6 more)
(+8 files in other folders)
